src/test/deca/context/valid/class_decl/same_name_field_and_method.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class Test {
	int b;
	void b() {
		int c = 2;
	}
}

{

}

